[package]
name = "tasks"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "tasks"
path = "src/main.rs" 

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.4"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["io-util", "process", "sync", "rt-multi-thread", "macros"] }

